# criticat

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  pytest.ini
.github/workflows/: ruff.yml
criticat/: document.py  flow.py  llm.py  models.py  server.py
src/criticat/: __init__.py  cli.py  document.py  flow.py  github.py  prompts.py
src/criticat/infrastructure/di/: container.py  providers.py
src/criticat/infrastructure/github/: config.py  pull_request.py
src/criticat/infrastructure/github/dtos/: pull_request.py
src/criticat/infrastructure/llms/: prompts.py  vertex_ai.py
src/criticat/infrastructure/llms/models/: formating.py
src/criticat/interfaces/: api.py  cli.py  mcp.py  server.py
src/criticat/models/: formatting.py  models.py
src/criticat/models/config/: app.py  environment.py  git.py
src/criticat/models/states/: control.py  review.py
src/criticat/use_cases/: review.py
tests/: conftest.py
tests/integration/interfaces/: test_api_integration.py
tests/unit/interfaces/: test_api.py
